# XhuSchedule

./: .travis.yml  build.gradle  build.gradle.kts  gradle.properties  privacy.md  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle  build.gradle.kts  google-services.json  proguard-rules.pro
app/release/: XhuScheduleUpdate.bat
app/src/main/: AndroidManifest.xml
app/src/main/assets/skins/: gray.XSskin
app/src/main/jni/: CMakeLists.txt  bspatch.c
app/src/main/jni/bzip2/: blocksort.c  bzip2.c  decompress.c
app/src/main/res-night/values/: res_night.xml
app/src/main/res/anim/: animation_settings_in_enter.xml  animation_settings_in_exit.xml  animation_settings_out_enter.xml  animation_settings_out_exit.xml  animation_share_list_enter.xml  animation_share_list_out.xml  animation_show_course_enter.xml  animation_show_course_out.xml  decelerate_interpolator.xml
app/src/main/res/drawable-night/: ic_about.xml  ic_action_export_to_calendar.xml  ic_action_export_to_calendar_management.xml  ic_add_account.xml  ic_arrow_drop_down_black_24dp.xml  ic_auto_check_update.xml  ic_check_update.xml  ic_chevron_left_black.xml  ic_cloud_download.xml  ic_cloud_upload.xml  ic_current_year_and_term.xml  ic_custom_course.xml  ic_custom_course_color.xml  ic_custom_start_time.xml  ic_custom_thing.xml  ic_disable_jrsc.xml  ic_enable_multi_student.xml  ic_enable_viewpager_transform.xml  ic_main_student.xml  ic_night_mode.xml  ic_notification_course.xml  ic_notification_exam.xml  ic_notifications.xml  ic_open_source_license.xml  (+11 more)
gradle/wrapper/: gradle-wrapper.properties
(+1038 files in other folders)
